--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -12,40 +12,32 @@
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Simple line icons-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css" rel="stylesheet" />
-    <!-- Google Fonts (Cairo for Arabic)-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
-    <!-- Custom CSS for Arabic Font -->
-    <style>
-        body, h1, h2, h3, h4, h5, h6, p, a, li, .btn {
-            font-family: 'Cairo', sans-serif;
-        }
-    </style>
 </head>
 <body id="page-top">
     <!-- Navigation-->
     <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
-            <li class="sidebar-brand"><a href="#page-top">أحمد مهدلي</a></li>
-            <li class="sidebar-nav-item"><a href="#page-top">الرئيسية</a></li>
-            <li class="sidebar-nav-item"><a href="#about">عني</a></li>
-            <li class="sidebar-nav-item"><a href="#services">خدماتي</a></li>
-            <li class="sidebar-nav-item"><a href="#portfolio">أعمالي</a></li>
-            <li class="sidebar-nav-item"><a href="#contact">تواصل معي</a></li>
+            <li class="sidebar-brand"><a href="#page-top">Ahmed M. Mahdaly</a></li>
+            <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
+            <li class="sidebar-nav-item"><a href="#about">About</a></li>
+            <li class="sidebar-nav-item"><a href="#services">Services</a></li>
+            <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
+            <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     <!-- Header-->
     <header class="masthead d-flex align-items-center">
         <div class="container px-4 px-lg-5 text-center">
-            <h1 class="mb-1">أهلاً بك، أنا أحمد مهدلي</h1>
+            <h1 class="mb-1">Hello, I'm Ahmed M. Mahdaly</h1>
             <h3 class="mb-5">
-                <em><i class="icon-screen-smartphone" style="font-size: 0.8em;"></i> مطور تطبيقات جوال للشركات</em>
+                <em><i class="icon-screen-smartphone" style="font-size: 0.8em;"></i> Mobile App Developer for Businesses</em>
             </h3>
-            <a class="btn btn-primary btn-xl" href="#about">اعرف المزيد عني</a>
+            <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
         </div>
     </header>
     <!-- About (What I Do)-->
@@ -53,12 +45,12 @@
         <div class="container px-4 px-lg-5 text-center">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-10">
-                    <h2>تحويل فكرة عملك إلى تطبيق جوال عالي الأداء</h2>
+                    <h2>Turning Your Business Idea into a High-Performance Mobile App</h2>
                     <p class="lead mb-5" style="font-size: 1.1rem;">
-                        أنا متخصص في تطوير تطبيقات الجوال المخصصة للشركات، حيث أحوّل المفاهيم والأفكار إلى منتجات آمنة، سهلة الاستخدام، وقابلة للتطوير. تركيزي ينصب على بناء تطبيقات لا تبدو رائعة فحسب، بل تحقق نتائج ملموسة وعائداً قوياً على الاستثمار لعملائي.
+                        I specialize in developing custom mobile applications for businesses, transforming concepts and ideas into secure, user-friendly, and scalable products. My focus is on building apps that not only look great but also deliver tangible results and a strong return on investment for my clients.
                     </p>
-                    <!-- قم برفع سيرتك الذاتية بصيغة PDF واستبدل # بالرابط -->
-                    <a class="btn btn-dark btn-xl" href="#">حمّل السيرة الذاتية</a>
+                    <!-- Upload your CV in PDF format and replace # with the link -->
+                    <a class="btn btn-dark btn-xl" href="#">Download CV</a>
                 </div>
             </div>
         </div>
@@ -67,29 +59,29 @@
     <section class="content-section bg-primary text-white text-center" id="services">
         <div class="container px-4 px-lg-5">
             <div class="content-section-heading">
-                <h3 class="text-secondary mb-0">ماذا أقدم</h3>
-                <h2 class="mb-5">خدماتي المتخصصة</h2>
+                <h3 class="text-secondary mb-0">What I Offer</h3>
+                <h2 class="mb-5">My Specialized Services</h2>
             </div>
             <div class="row gx-4 gx-lg-5">
                 <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                     <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
-                    <h4><strong>تطوير تطبيقات مخصصة</strong></h4>
-                    <p class="text-faded mb-0">بناء تطبيقات (Native & Cross-platform) مصممة خصيصاً لتلبية احتياجات عملك الفريدة.</p>
+                    <h4><strong>Custom App Development</strong></h4>
+                    <p class="text-faded mb-0">Building native & cross-platform apps tailored to your unique business needs.</p>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                     <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
-                    <h4><strong>تصميم واجهة وتجربة المستخدم</strong></h4>
-                    <p class="text-faded mb-0">تصميم واجهات بديهية وجذابة تضمن تفاعل المستخدمين وتحقق أهدافك.</p>
+                    <h4><strong>UI/UX Design</strong></h4>
+                    <p class="text-faded mb-0">Designing intuitive and engaging interfaces that ensure user retention and achieve your goals.</p>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
                     <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-rocket"></i></span>
-                    <h4><strong>استراتيجية وإطلاق التطبيق</strong></h4>
-                    <p class="text-faded mb-0">أساعدك في وضع استراتيجية واضحة للتطبيق ونشره بنجاح على متاجر Apple و Google.</p>
+                    <h4><strong>App Strategy & Launch</strong></h4>
+                    <p class="text-faded mb-0">Helping you define a clear app strategy and successfully publishing it on the Apple and Google stores.</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-settings"></i></span>
-                    <h4><strong>الدعم والصيانة</strong></h4>
-                    <p class="text-faded mb-0">تقديم الدعم الفني والتحديثات لضمان عمل تطبيقك بكفاءة وأمان دائمًا.</p>
+                    <h4><strong>Support & Maintenance</strong></h4>
+                    <p class="text-faded mb-0">Providing technical support and updates to ensure your app runs efficiently and securely.</p>
                 </div>
             </div>
         </div>
@@ -98,23 +90,23 @@
     <section class="content-section" id="portfolio">
         <div class="container px-4 px-lg-5">
             <div class="content-section-heading text-center">
-                <h3 class="text-secondary mb-0">معرض الأعمال</h3>
-                <h2 class="mb-5">أحدث المشاريع</h2>
+                <h3 class="text-secondary mb-0">Portfolio</h3>
+                <h2 class="mb-5">Recent Projects</h2>
             </div>
             <div class="row gx-0">
                 <!-- Project 1 -->
                 <div class="col-lg-6">
-                    <!-- استبدل # برابط المشروع المباشر أو صفحة تفاصيل المشروع -->
+                    <!-- Replace # with a link to the live project or a details page -->
                     <a class="portfolio-item" href="#">
                         <div class="caption">
                             <div class="caption-content">
-                                <!-- استبدل هذا باسم مشروعك -->
-                                <div class="h2">اسم المشروع الأول</div>
-                                <!-- استبدل هذا بوصف للمشروع يركز على المشكلة التي حلها للعميل -->
-                                <p class="mb-0">وصف موجز للمشروع والنتيجة التي حققها للعميل. مثال: "تطبيق لإدارة حجوزات المطاعم ساهم في زيادة الحجوزات بنسبة 30%."</p>
+                                <!-- Replace this with your project name -->
+                                <div class="h2">Project Name One</div>
+                                <!-- Replace this with a description focusing on the problem solved for the client -->
+                                <p class="mb-0">A brief description of the project and the value it delivered. Example: "A restaurant booking app that helped increase reservations by 30%."</p>
                             </div>
                         </div>
-                        <!-- استبدل الصورة بصورة من مشروعك (يفضل مقاس 600x400) -->
+                        <!-- Replace the image with one from your project (600x400 is a good size) -->
                         <img class="img-fluid" src="https://placehold.co/600x400/1D809F/FFFFFF?text=Project+1" alt="Project 1" />
                     </a>
                 </div>
@@ -123,8 +115,8 @@
                     <a class="portfolio-item" href="#">
                         <div class="caption">
                             <div class="caption-content">
-                                <div class="h2">اسم المشروع الثاني</div>
-                                <p class="mb-0">وصف موجز للمشروع والنتيجة التي حققها للعميل.</p>
+                                <div class="h2">Project Name Two</div>
+                                <p class="mb-0">A brief description of the project and the value it delivered.</p>
                             </div>
                         </div>
                         <img class="img-fluid" src="https://placehold.co/600x400/1D809F/FFFFFF?text=Project+2" alt="Project 2" />
@@ -135,8 +127,8 @@
                     <a class="portfolio-item" href="#">
                         <div class="caption">
                             <div class="caption-content">
-                                <div class="h2">اسم المشروع الثالث</div>
-                                <p class="mb-0">وصف موجز للمشروع والنتيجة التي حققها للعميل.</p>
+                                <div class="h2">Project Name Three</div>
+                                <p class="mb-0">A brief description of the project and the value it delivered.</p>
                             </div>
                         </div>
                         <img class="img-fluid" src="https://placehold.co/600x400/1D809F/FFFFFF?text=Project+3" alt="Project 3" />
@@ -147,8 +139,8 @@
                     <a class="portfolio-item" href="#">
                         <div class="caption">
                             <div class="caption-content">
-                                <div class="h2">اسم المشروع الرابع</div>
-                                <p class="mb-0">وصف موجز للمشروع والنتيجة التي حققها للعميل.</p>
+                                <div class="h2">Project Name Four</div>
+                                <p class="mb-0">A brief description of the project and the value it delivered.</p>
                             </div>
                         </div>
                         <img class="img-fluid" src="https://placehold.co/600x400/1D809F/FFFFFF?text=Project+4" alt="Project 4" />
@@ -160,11 +152,11 @@
     <!-- Call to Action-->
     <section class="content-section bg-primary text-white" id="contact">
         <div class="container px-4 px-lg-5 text-center">
-            <h2 class="mb-4">هل لديك فكرة مشروع؟ لنتحدث!</h2>
-            <!-- استبدل # برابط يقود إلى بريدك الإلكتروني مباشرة -->
-            <a class="btn btn-xl btn-light me-4" href="mailto:your-email@example.com">تواصل معي الآن</a>
-             <!-- استبدل # برابط حسابك على LinkedIn -->
-            <a class="btn btn-xl btn-dark" href="#">حسابي على LinkedIn</a>
+            <h2 class="mb-4">Have a project idea? Let's talk!</h2>
+            <!-- Replace # with a link to your email -->
+            <a class="btn btn-xl btn-light me-4" href="mailto:your-email@example.com">Contact Me Now</a>
+             <!-- Replace # with a link to your LinkedIn profile -->
+            <a class="btn btn-xl btn-dark" href="#">My LinkedIn Profile</a>
         </div>
     </section>
     <!-- Footer-->
@@ -172,19 +164,19 @@
         <div class="container px-4 px-lg-5">
             <ul class="list-inline mb-5">
                 <li class="list-inline-item">
-                     <!-- استبدل # برابط حسابك على LinkedIn -->
+                     <!-- Replace # with a link to your LinkedIn profile -->
                     <a class="social-link rounded-circle text-white mr-3" href="#"><i class="icon-social-linkedin"></i></a>
                 </li>
                 <li class="list-inline-item">
-                     <!-- استبدل # برابط حسابك على Twitter (X) إن وجد -->
+                     <!-- Replace # with a link to your Twitter (X) profile, if you have one -->
                     <a class="social-link rounded-circle text-white mr-3" href="#"><i class="icon-social-twitter"></i></a>
                 </li>
                 <li class="list-inline-item">
-                    <!-- استبدل # برابط حسابك على GitHub -->
+                    <!-- Replace # with a link to your GitHub profile -->
                     <a class="social-link rounded-circle text-white" href="#"><i class="icon-social-github"></i></a>
                 </li>
             </ul>
-            <p class="text-muted small mb-0">حقوق النشر &copy; موقع أحمد المهدلي 2024</p>
+            <p class="text-muted small mb-0">Copyright &copy; Ahmed Mahdaly 2024</p>
         </div>
     </footer>
     <!-- Scroll to Top Button-->
