--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </nav>
     <!-- Header-->
     <!-- I've added an inline style to change the background image. Replace the URL with your own. -->
-    <header class="masthead d-flex align-items-center" style="background-image: url('https://images.unsplash.com/photo-1550745165-9bc0b252726a?q=80&w=2070&auto=format&fit=crop');">
+    <header class="masthead d-flex align-items-center" style="background-image: url('https://images.unsplash.com/photo-1542641728-6ca359b085f4?q=80&w=465&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
         <div class="container px-4 px-lg-5 text-center">
             <h1 class="mb-3">Hello, I'm Ahmed Mahdaly</h1>
             <!-- Text Slider -->
