--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     </nav>
     <!-- Header-->
     <!-- I've added an inline style to change the background image. Replace the URL with your own. -->
-    <header class="masthead d-flex align-items-center" style="background-image: url('https://images.unsplash.com/photo-1583161442702-8c283bba7e46?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+    <header class="masthead d-flex align-items-center" style="background-image: url('https://images.unsplash.com/flagged/photo-1593005510329-8a4035a7238f?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
         <div class="container px-4 px-lg-5 text-center">
-            <h1 class="mb-3">Hello, I'm Ahmed Mahdaly</h1>
+            <h1 class="mb-3">Hello, I'm Ahmed M. Mahdaly</h1>
             <!-- Text Slider -->
             <div class="slider-container">
                 <div class="slider-text">
@@ -89,7 +89,7 @@
                     <span>Mobile App Developer</span>
                     <span>Business Solutions Expert</span>
                     <span>UI/UX Designer</span>
-                    <span>Flutter & React Native Specialist</span>
+                    <span>Flutter Developer</span>
                     <span>Mobile App Developer</span> <!-- Repeat the first item for a smooth loop -->
                 </div>
             </div>
@@ -181,8 +181,8 @@
     <section class="content-section bg-primary text-white" id="contact">
         <div class="container px-4 px-lg-5 text-center">
             <h2 class="mb-4">Have a project idea? Let's talk!</h2>
-            <a class="btn btn-xl btn-light me-4" href="mailto:your-email@example.com">Contact Me Now</a>
-            <a class="btn btn-xl btn-dark" href="#">My LinkedIn Profile</a>
+            <a class="btn btn-xl btn-light me-4" href="mailto:ahmed.mahdaly86@gmail.com">Contact Me Now</a>
+            <a class="btn btn-xl btn-dark" href="https://www.linkedin.com/in/ahmed-mahdaly/">My LinkedIn Profile</a>
         </div>
     </section>
     <!-- Footer-->
@@ -190,16 +190,16 @@
         <div class="container px-4 px-lg-5">
             <ul class="list-inline mb-5">
                 <li class="list-inline-item">
-                    <a class="social-link rounded-circle text-white mr-3" href="#"><i class="icon-social-linkedin"></i></a>
+                    <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/ahmed-mahdaly/"><i class="icon-social-linkedin"></i></a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="social-link rounded-circle text-white mr-3" href="#"><i class="icon-social-twitter"></i></a>
+                    <a class="social-link rounded-circle text-white mr-3" href="https://wa.me/201027705331"><i class="icon-social-whatsapp"></i></a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="social-link rounded-circle text-white" href="#"><i class="icon-social-github"></i></a>
+                    <a class="social-link rounded-circle text-white" href="https://github.com/AhmadMahdaly"><i class="icon-social-github"></i></a>
                 </li>
             </ul>
-            <p class="text-muted small mb-0">Copyright &copy; Ahmed Mahdaly 2024</p>
+            <p class="text-muted small mb-0">Copyright &copy; Ahmed Mahdaly 2025</p>
         </div>
     </footer>
     <!-- Scroll to Top Button-->
