--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/ahmed-mahdaly/"><i class="icon-social-linkedin"></i></a>
                 </li>
                 <li class="list-inline-item">
-                    <a class="social-link rounded-circle text-white mr-3" href="https://wa.me/201027705331"><i class="icon-social-whatsapp"></i></a>
+                    <a class="social-link rounded-circle text-white mr-3" href="https://wa.me/201027705331"><i class="fab fa-whatsapp"></i></a>
                 </li>
                 <li class="list-inline-item">
                     <a class="social-link rounded-circle text-white" href="https://github.com/AhmadMahdaly"><i class="icon-social-github"></i></a>
