--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </nav>
     <!-- Header-->
     <!-- I've added an inline style to change the background image. Replace the URL with your own. -->
-    <header class="masthead d-flex align-items-center" style="background-image: url('https://images.unsplash.com/flagged/photo-1593005510329-8a4035a7238f?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+    <header class="masthead d-flex align-items-center" style="background-image: url('https://images.pexels.com/photos/33275348/pexels-photo-33275348.png');">
         <div class="container px-4 px-lg-5 text-center">
             <h1 class="mb-3">Hello, I'm Ahmed M. Mahdaly</h1>
             <!-- Text Slider -->
@@ -93,7 +93,7 @@
                     <span>Mobile App Developer</span> <!-- Repeat the first item for a smooth loop -->
                 </div>
             </div>
-            <a class="btn btn-primary btn-xl mt-5" href="#about">Find Out More</a>
+            <a class="btn btn-light btn-xl mt-5" href="#about">Find Out More</a>
         </div>
     </header>
     <!-- About (What I Do)-->
