--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .masthead {
             /* This ensures the background image covers the whole area */
             background-size: cover;
-            background-position: center;
+            background-position: left;
         }
 
         .slider-container {
