--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .masthead {
             /* This ensures the background image covers the whole area */
             background-size: cover;
-            background-position: left;
+            background-position: center;
         }
 
         .slider-container {
@@ -80,7 +80,7 @@
     <!-- Header-->
     <!-- I've added an inline style to change the background image. Replace the URL with your own. -->
     <header class="masthead d-flex align-items-center" style="background-image: url('https://images.pexels.com/photos/33275468/pexels-photo-33275468.png');">
-        <div class="container px-4 px-lg-5 text-center">
+        <div class="container px-4 px-lg-5 text-left">
             <h1 class="mb-3">Hello, I'm Ahmed M. Mahdaly</h1>
             <!-- Text Slider -->
             <div class="slider-container">
