--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .masthead {
             /* This ensures the background image covers the whole area */
             background-size: cover;
-            background-position: center;
+            background-position: right;
         }
 
         .slider-container {
@@ -37,7 +37,7 @@
             width: 100%;
             margin: 0;
             line-height: 45px;
-            text-align: center;
+            text-align: left;
             /* Animation */
             animation: slide 12s infinite;
         }
@@ -81,7 +81,7 @@
     <!-- I've added an inline style to change the background image. Replace the URL with your own. -->
     <header class="masthead d-flex align-items-center" style="background-image: url('https://images.pexels.com/photos/33275468/pexels-photo-33275468.png');">
         <div class="container px-4 px-lg-5 text-left">
-            <h1 class="mb-3">Hello, I'm Ahmed M. Mahdaly</h1>
+            <h1 class="mb-3 text-white">Hello, I'm Ahmed Mahdaly</h1>
             <!-- Text Slider -->
             <div class="slider-container">
                 <div class="slider-text">
