--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             overflow: hidden;
             position: relative;
             color: #fff;
-            text-align: center;
+            text-align: left;
         }
 
         .slider-text {
@@ -80,7 +80,7 @@
     <!-- Header-->
     <!-- I've added an inline style to change the background image. Replace the URL with your own. -->
     <header class="masthead d-flex align-items-center" style="background-image: url('https://images.pexels.com/photos/33275768/pexels-photo-33275768.png');">
-        <div class="container px-4 px-lg-5 text-left">
+        <div class="container px-4 px-lg-5 text-start">
             <h2 class="mb-3 text-white">Hello,</h2>
             <h1 class="mb-3 text-white">I'm Ahmed M. Mahdaly</h1>
             <!-- Text Slider -->
@@ -182,6 +182,7 @@
     <section class="content-section bg-primary text-white" id="contact">
         <div class="container px-4 px-lg-5 text-center">
             <h2 class="mb-4">Have a project idea? Let's talk!</h2>
+            <div class="d-grid gap-3 d-md-flex justify-content-md-center">
             <a class="btn btn-xl btn-light me-4" href="mailto:ahmed.mahdaly86@gmail.com">Contact Me Now</a>
             <a class="btn btn-xl btn-dark" href="https://www.linkedin.com/in/ahmed-mahdaly/">My LinkedIn Profile</a>
         </div>
