--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
             64% { transform: translateY(-180px); } /* This helps create a smooth loop */
             100% { transform: translateY(0); }
         }
+        .social-link i.fab.fa-whatsapp {
+            font-size: 1.5rem;
+        }
     </style>
 </head>
 <body id="page-top">
@@ -92,7 +95,7 @@
     </nav>
     <!-- Header-->
     <!-- I've added an inline style to change the background image. Replace the URL with your own. -->
-    <header class="masthead d-flex align-items-center" style="background-image: url('https://images.pexels.com/photos/33275768/pexels-photo-33275768.png');">
+    <header class="masthead d-flex align-items-right" style="background-image: url('https://images.pexels.com/photos/33275768/pexels-photo-33275768.png');">
         <div class="container px-4 px-lg-5 text-start">
             <h2 class="mb-3 text-white">Hello,</h2>
             <h1 class="mb-3 text-white">I'm Ahmed M. Mahdaly</h1>
