--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                     <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
                     <h4><strong>Custom App Development</strong></h4>
-                    <p class="text-faded mb-0">Building native & cross-platform apps tailored to your unique business needs.</p>
+                    <p class="text-faded mb-0">Building cross-platform apps tailored to your unique business needs.</p>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                     <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
