--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .masthead {
             position: relative; /* Needed for the overlay */
             background-size: cover;
-            background-position: center;
+            background-position: right;
         }
         /* Add a dark overlay to make text more readable */
         .masthead::before {
