--- a/index.html
+++ b/index.html
@@ -253,11 +253,57 @@
             <p class="text-muted small mb-0">Copyright &copy; Ahmed Mahdaly 2025</p>
         </div>
     </footer>
+
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
+    <!-- Custom JS for Modal -->
+    <script>
+        const portfolioModal = document.getElementById('portfolioModal');
+        portfolioModal.addEventListener('show.bs.modal', function (event) {
+            // Button that triggered the modal
+            const button = event.relatedTarget;
+
+            // Extract info from data-* attributes
+            const title = button.getAttribute('data-title');
+            const videoSrc = button.getAttribute('data-video');
+            const images = button.getAttribute('data-images').split(',');
+            const description = button.getAttribute('data-description');
+
+            // Update the modal's content
+            const modalTitle = portfolioModal.querySelector('.modal-title');
+            const modalVideo = portfolioModal.querySelector('#modalVideo');
+            const modalDescription = portfolioModal.querySelector('#modalDescription');
+            const modalGallery = portfolioModal.querySelector('#modalGallery');
+
+            modalTitle.textContent = title;
+            modalVideo.setAttribute('src', videoSrc);
+            modalDescription.textContent = description;
+
+            // Clear previous images
+            modalGallery.innerHTML = '';
+            // Add new images
+            images.forEach(imgUrl => {
+                if (imgUrl) { // Check if the URL is not empty
+                    const col = document.createElement('div');
+                    col.className = 'col-md-6';
+                    const img = document.createElement('img');
+                    img.src = imgUrl.trim();
+                    img.className = 'img-fluid mb-3';
+                    col.appendChild(img);
+                    modalGallery.appendChild(col);
+                }
+            });
+        });
+
+        // Stop video when modal is closed
+        portfolioModal.addEventListener('hide.bs.modal', function (event) {
+            const modalVideo = portfolioModal.querySelector('#modalVideo');
+            modalVideo.setAttribute('src', '');
+        });
+    </script>
 </body>
 </html>
