--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             <li class="sidebar-nav-item"><a class="js-scroll-trigger" href="#about">About</a></li>
             <li class="sidebar-nav-item"><a class="js-scroll-trigger" href="#services">Services</a></li>
             <li class="sidebar-nav-item"><a class="js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+            <li class="sidebar-nav-item"><a class="js-scroll-trigger" href="#certificates">Certificates</a></li>
             <li class="sidebar-nav-item"><a class="js-scroll-trigger" href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -222,6 +223,41 @@
                             </div>
                         </div>
                         <img class="img-fluid" src="https://placehold.co/600x400/E83E8C/FFFFFF?text=Project+2" alt="Booking System" />
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+ <!-- Certificates -->
+    <section class="content-section bg-light" id="certificates">
+        <div class="container px-4 px-lg-5">
+            <div class="content-section-heading text-center">
+                <h3 class="text-secondary mb-0">My Credentials</h3>
+                <h2 class="mb-5">Certificates & Awards</h2>
+            </div>
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <!-- Certificate 1 -->
+                <div class="col-lg-4 col-md-6 mb-4 text-center certificate-item">
+                    <a href="YOUR_CERTIFICATE_LINK_1" target="_blank">
+                        <i class="fas fa-award"></i>
+                        <h4><strong>Certificate Title 1</strong></h4>
+                        <p class="text-muted mb-0">Issued by: Issuing Authority</p>
+                    </a>
+                </div>
+                <!-- Certificate 2 -->
+                <div class="col-lg-4 col-md-6 mb-4 text-center certificate-item">
+                    <a href="YOUR_CERTIFICATE_LINK_2" target="_blank">
+                        <i class="fas fa-award"></i>
+                        <h4><strong>Certificate Title 2</strong></h4>
+                        <p class="text-muted mb-0">Issued by: Issuing Authority</p>
+                    </a>
+                </div>
+                <!-- Certificate 3 -->
+                <div class="col-lg-4 col-md-6 mb-4 text-center certificate-item">
+                    <a href="YOUR_CERTIFICATE_LINK_3" target="_blank">
+                        <i class="fas fa-award"></i>
+                        <h4><strong>Certificate Title 3</strong></h4>
+                        <p class="text-muted mb-0">Issued by: Issuing Authority</p>
                     </a>
                 </div>
             </div>
