--- a/index.html
+++ b/index.html
@@ -238,26 +238,26 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <!-- Certificate 1 -->
                 <div class="col-lg-4 col-md-6 mb-4 text-center certificate-item">
-                    <a href="YOUR_CERTIFICATE_LINK_1" target="_blank">
+                    <a href="https://www.udemy.com/certificate/UC-c4f90a4f-9d2f-4ebc-b9c1-ca3255a2a85d/" target="_blank">
                         <i class="fas fa-award"></i>
-                        <h4><strong>Certificate Title 1</strong></h4>
-                        <p class="text-muted mb-0">Issued by: Issuing Authority</p>
+                        <h4><strong>The Complete Flutter & Dart : Basics to Advanced [Arabic]</strong></h4>
+                        <p class="text-muted mb-0">Issued by: Udemy</p>
                     </a>
                 </div>
                 <!-- Certificate 2 -->
                 <div class="col-lg-4 col-md-6 mb-4 text-center certificate-item">
-                    <a href="YOUR_CERTIFICATE_LINK_2" target="_blank">
+                    <a href="https://www.udemy.com/certificate/UC-151c9035-ef01-47e2-a47a-7d1f75e7cd06/" target="_blank">
                         <i class="fas fa-award"></i>
-                        <h4><strong>Certificate Title 2</strong></h4>
-                        <p class="text-muted mb-0">Issued by: Issuing Authority</p>
+                        <h4><strong>Complete Flutter & Dart Development Course [Arabic]</strong></h4>
+                        <p class="text-muted mb-0">Issued by: Udemy</p>
                     </a>
                 </div>
                 <!-- Certificate 3 -->
                 <div class="col-lg-4 col-md-6 mb-4 text-center certificate-item">
-                    <a href="YOUR_CERTIFICATE_LINK_3" target="_blank">
+                    <a href="https://www.udemy.com/certificate/UC-ce760d44-452b-4d40-a779-92b0692a365d/" target="_blank">
                         <i class="fas fa-award"></i>
-                        <h4><strong>Certificate Title 3</strong></h4>
-                        <p class="text-muted mb-0">Issued by: Issuing Authority</p>
+                        <h4><strong>Mastering Programming: A Comprehensive Course In [Arabic]</strong></h4>
+                        <p class="text-muted mb-0">Issued by: Udemy</p>
                     </a>
                 </div>
             </div>
