--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         </div>
     </section>
  <!-- Certificates -->
-    <section class="content-section bg-light" id="certificates">
+    <section class="content-section" id="certificates">
         <div class="container px-4 px-lg-5">
             <div class="content-section-heading text-center">
                 <h3 class="text-secondary mb-0">My Credentials</h3>
