--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             <li class="sidebar-nav-item"><a class="js-scroll-trigger" href="#about">About</a></li>
             <li class="sidebar-nav-item"><a class="js-scroll-trigger" href="#services">Services</a></li>
             <li class="sidebar-nav-item"><a class="js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+            <li class="sidebar-nav-item"><a class="js-scroll-trigger" href="#experience">Experience</a></li>
             <li class="sidebar-nav-item"><a class="js-scroll-trigger" href="#certificates">Certificates</a></li>
             <li class="sidebar-nav-item"><a class="js-scroll-trigger" href="#contact">Contact</a></li>
         </ul>
@@ -226,6 +227,43 @@
                     </a>
                 </div>
             </div>
+        </div>
+    </section>
+        <!-- Experience -->
+    <section class="content-section bg-primary text-white text-center" id="experience">
+        <div class="container">
+            <div class="content-section-heading text-center">
+                <h3 class="text-secondary mb-0">Career Path</h3>
+                <h2 class="mb-5">Work Experience</h2>
+            </div>
+            <ul class="timeline">
+                <!-- Experience 1 -->
+                <li>
+                    <div class="timeline-badge"><i class="fas fa-briefcase"></i></div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4 class="timeline-title">Job Title Here</h4>
+                            <p><small class="text-muted"><i class="fas fa-building"></i> Company Name | <i class="fas fa-calendar-alt"></i> March 2021 - Present</small></p>
+                        </div>
+                        <div class="timeline-body">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cumque sunt dolores, sint.</p>
+                        </div>
+                    </div>
+                </li>
+                <!-- Experience 2 -->
+                <li class="timeline-inverted">
+                    <div class="timeline-badge"><i class="fas fa-briefcase"></i></div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4 class="timeline-title">Another Job Title</h4>
+                             <p><small class="text-muted"><i class="fas fa-building"></i> Another Company | <i class="fas fa-calendar-alt"></i> January 2019 - February 2021</small></p>
+                        </div>
+                        <div class="timeline-body">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cumque sunt dolores, sint.</p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
         </div>
     </section>
  <!-- Certificates -->
