--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <div class="timeline-panel">
                         <div class="timeline-heading">
                             <h4 class="timeline-title">Job Title Here</h4>
-                            <p><small class="text-muted"><i class="fas fa-building"></i> Company Name | <i class="fas fa-calendar-alt"></i> March 2021 - Present</small></p>
+                            <p><small class="text-white"><i class="fas fa-building"></i> Company Name | <i class="fas fa-calendar-alt text-white"></i> March 2021 - Present</small></p>
                         </div>
                         <div class="timeline-body">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cumque sunt dolores, sint.</p>
