--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                         <div class="experience-panel text-center">
                             <h4>Another Job Title</h4>
                             <p class="text-muted mb-2"><i class="fas fa-building"></i> Another Company | <i class="fas fa-calendar-alt"></i> January 2019 - February 2021</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cumque sunt dolores, sint.</p>
+                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cumque sunt dolores, sint.</p>
                         </div>
                     </div>
                     <!-- Add more carousel-item divs for more experiences -->
