--- a/index.html
+++ b/index.html
@@ -268,15 +268,15 @@
                     <div class="carousel-item active">
                         <div class="experience-panel text-center">
                             <h4>Job Title Here</h4>
-                            <p class="text-muted mb-2"><i class="fas fa-building"></i>  Company Name  |  <i class="fas fa-calendar-alt"></i> March 2021 - Present</p>
-                            <p class="text-muted>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cumque sunt dolores, sint.</p>
+                            <p class="text-muted mb-2"><i class="fas fa-building"></i> Company Name | <i class="fas fa-calendar-alt"></i> March 2021 - Present</p>
+                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cumque sunt dolores, sint.</p>
                         </div>
                     </div>
                     <!-- Experience 2 -->
                     <div class="carousel-item">
                         <div class="experience-panel text-center">
                             <h4>Another Job Title</h4>
-                            <p class="text-muted mb-2"><i class="fas fa-building"></i>  Another Company  |  <i class="fas fa-calendar-alt"></i> January 2019 - February 2021</p>
+                            <p class="text-muted mb-2"><i class="fas fa-building"></i> Another Company | <i class="fas fa-calendar-alt"></i> January 2019 - February 2021</p>
                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cumque sunt dolores, sint.</p>
                         </div>
                     </div>
