--- a/index.html
+++ b/index.html
@@ -267,16 +267,16 @@
                     <!-- Experience 1 -->
                     <div class="carousel-item active">
                         <div class="experience-panel text-center">
-                            <h4>Job Title Here</h4>
-                            <p class="text-muted mb-2"><i class="fas fa-building"></i> Company Name | <i class="fas fa-calendar-alt"></i> March 2021 - Present</p>
+                            <h4>Mobile Application Developer</h4>
+                            <p class="text-muted mb-2"><i class="fas fa-building"></i> المصدر لتقنية المعلومات | SIT | <i class="fas fa-calendar-alt"></i> May 2025 - Present</p>
                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cumque sunt dolores, sint.</p>
                         </div>
                     </div>
                     <!-- Experience 2 -->
                     <div class="carousel-item">
                         <div class="experience-panel text-center">
-                            <h4>Another Job Title</h4>
-                            <p class="text-muted mb-2"><i class="fas fa-building"></i> Another Company | <i class="fas fa-calendar-alt"></i> January 2019 - February 2021</p>
+                            <h4>Flutter Developer</h4>
+                            <p class="text-muted mb-2"><i class="fas fa-building"></i> Freelance | <i class="fas fa-calendar-alt"></i> Dec 2023 - Present</p>
                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cumque sunt dolores, sint.</p>
                         </div>
                     </div>
@@ -303,27 +303,21 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <!-- Certificate 1 -->
                 <div class="col-lg-4 col-md-6 mb-4 text-center certificate-item">
-                    <a href="https://www.udemy.com/certificate/UC-c4f90a4f-9d2f-4ebc-b9c1-ca3255a2a85d/" target="_blank">
-                        <i class="fas fa-award"></i>
-                        <h4><strong>The Complete Flutter & Dart : Basics to Advanced [Arabic]</strong></h4>
+                    <i class="fas fa-award"></i>
+                   <h4><strong><a href="https://www.udemy.com/certificate/UC-c4f90a4f-9d2f-4ebc-b9c1-ca3255a2a85d/" target="_blank">The Complete Flutter & Dart : Basics to Advanced [Arabic]</a></strong></h4>
                         <p class="text-muted mb-0">Issued by: Udemy</p>
-                    </a>
                 </div>
                 <!-- Certificate 2 -->
                 <div class="col-lg-4 col-md-6 mb-4 text-center certificate-item">
-                    <a href="https://www.udemy.com/certificate/UC-151c9035-ef01-47e2-a47a-7d1f75e7cd06/" target="_blank">
-                        <i class="fas fa-award"></i>
-                        <h4><strong>Complete Flutter & Dart Development Course [Arabic]</strong></h4>
+                    <i class="fas fa-award"></i>
+                    <h4><strong><a href="https://www.udemy.com/certificate/UC-151c9035-ef01-47e2-a47a-7d1f75e7cd06/" target="_blank">Complete Flutter & Dart Development Course [Arabic]</a></strong></h4>
                         <p class="text-muted mb-0">Issued by: Udemy</p>
-                    </a>
                 </div>
                 <!-- Certificate 3 -->
                 <div class="col-lg-4 col-md-6 mb-4 text-center certificate-item">
-                    <a href="https://www.udemy.com/certificate/UC-ce760d44-452b-4d40-a779-92b0692a365d/" target="_blank">
-                        <i class="fas fa-award"></i>
-                        <h4><strong>Mastering Programming: A Comprehensive Course In [Arabic]</strong></h4>
+                    <i class="fas fa-award"></i>
+                    <h4><strong><a href="https://www.udemy.com/certificate/UC-ce760d44-452b-4d40-a779-92b0692a365d/" target="_blank">Mastering Programming: A Comprehensive Course In [Arabic]</a></strong></h4>
                         <p class="text-muted mb-0">Issued by: Udemy</p>
-                    </a>
                 </div>
             </div>
         </div>
