--- a/index.html
+++ b/index.html
@@ -99,6 +99,34 @@
             margin-bottom: 15px;
             border-radius: 5px;
         }
+        /* Updated Certificate Styles */
+        .certificate-item {
+            padding: 1.5rem;
+            border: 1px solid #dee2e6;
+            border-radius: 0.5rem;
+            transition: all 0.2s ease-in-out;
+            background-color: #fff;
+        }
+        .certificate-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+        }
+        .certificate-item h4 {
+            margin: 0;
+            font-size: 1.2rem;
+        }
+        .certificate-item h4 a {
+            text-decoration: none;
+            color: #212529;
+        }
+        .certificate-item h4 a:hover {
+            color: #1D809F; /* Link hover color */
+        }
+        .certificate-item i {
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+            color: #D4AF37; /* Golden color */
+        }
         /* Experience Carousel Styles */
         .experience-panel {
             max-width: 80%;
